--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,3 +1,4 @@
+---
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
     - init: >
@@ -19,3 +20,4 @@ vscode:
     extensions:
         - ms-toolsai.jupyter
         - vscode.python
+        - ms-python.python
